--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		  
 		<div class="form-group">
 			  <label for="purpose">用途</label>
-			  <input class="form-control" type="text" v-model="person.purpose" :disabled="person.name == undefined"/>
+			  <input class="form-control" type="text" v-model="person.borrowpurpose" :disabled="person.name == undefined"/>
 		</div>
 		
 
